--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,27 @@
 {
-  "name": "creativecodelabs/silverstripe-smtp-tester",
-  "description": "Silverstripe SMTP Tester allows developers to test their site's SMTP configuration from the admin area.",
-  "type": "silverstripe-module",
-  "keywords": [
-	"silverstripe",
-	"smtp",
-	"tester"
-  ],
-  "license": "GPL-3.0",
-  "authors": [
-	{
-	  "name": "Joe Chenevey",
-	  "email": "joe@creativecodelabsllc.com"
-	}
-  ],
-  "require": {
-	"silverstripe/framework": "^3.5",
-	"silverstripe/cms": "^3.5"
-  }
+    "name": "innis-maggiore/silverstripe-smtp-tester",
+    "description": "Silverstripe SMTP Tester allows developers to test their site's SMTP configuration from the admin area.",
+    "type": "silverstripe-module",
+    "homepage": "https://github.com/InnisMaggiore/silverstripe-smtp-tester",
+    "keywords": ["silverstripe", "smtp"],
+    "license": "BSD-3-Clause",
+    "authors": [
+        {
+            "name": "Dave Collins",
+            "email": "dave.collins@innismaggiore.com"
+        }, {
+            "name": "Joe Chenevey",
+            "email": "joe.chenevey@innismaggiore.com"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/InnisMaggiore/silverstripe-smtp-tester/issues"
+    },
+    "require": {
+        "php": ">=5.6.0",
+        "silverstripe/framework": "^3.5",
+        "silverstripe/cms": "^3.5"
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
