--- a/_config/smtp-tester.yml
+++ b/_config/smtp-tester.yml
@@ -3,4 +3,4 @@ Name: silverstripe-smtp-tester
 ---
 SilverStripe\Admin\LeftAndMain:
   extra_requirements_css:
-  - 'resources/vendor/innis-maggiore/silverstripe-smtp-tester/css/menu-icon.css'
+  - 'innis-maggiore/silverstripe-smtp-tester:css/menu-icon.css'
